--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
     "main": "server.js",
     "dependencies": {
         "twit":"^2.2.11"
+    },
+    "scripts": {
+      "start": "node server.js",
+      "test": "echo \"Error: no test specified\" && exit 1"
     }
 }
