--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "twit": "^2.2.11",
     "express": "^4.16.4",
-    "webhook-discord": "^3.2.0"
+    "webhook-discord": "^3.2.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {},
   "scripts": {
