--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "send a message with mention (Twitter, Discord)",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.16.4",
-    "webhook-discord": "^3.2.0",
-    "request": "^2.88.0",
+    "axios": "^0.18.0",
     "body-parser": "^1.19.0",
-    "axios": "^0.18.0"
+    "express": "^4.16.4",
+    "request": "^2.88.0",
+    "webhook-discord": "^3.2.0"
   },
   "devDependencies": {},
   "scripts": {
