--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "send a message with mention (Twitter, Discord)",
   "main": "server.js",
   "dependencies": {
+    "@sentry/node": "^5.3.0",
     "axios": "^0.18.0",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
