--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@sentry/node": "^5.3.0",
     "axios": "^0.18.0",
     "body-parser": "^1.19.0",
+    "discord.js": "^11.5.1",
     "express": "^4.16.4",
     "request": "^2.88.0",
     "webhook-discord": "^3.2.0"
